--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,27 @@ services:
     volumes:
       - mongo-data:/data/db
 
-  rest-service:
-    build: .
-    container_name: rest-service
+  user-db-adapter:
+    build:
+      context: ./adapter_services/user_db_adapter
+    container_name: user-db-adapter
     ports:
       - "5000:5000"
     depends_on:
       - mongodb
     environment:
       - MONGO_URI=mongodb://mongodb:27017/userdb
+
+  omdb-adapter:
+    build:
+      context: ./adapter_services/omdb_adapter
+    container_name: omdb-adapter
+    ports:
+      - "5001:5000"
+    env_file:
+      - .env
+    environment:
+      - OMDB_API_KEY=${OMDB_API_KEY}
 
 volumes:
   mongo-data:
