--- a/adapter_services/omdb_adapter/Dockerfile
+++ b/adapter_services/omdb_adapter/Dockerfile
@@ -7,6 +7,9 @@ WORKDIR /omdb_adapter
 # Copy the current directory contents into the container at /omdb_adapter
 COPY . .
 
+# Remove the test folder
+RUN rm -rf ./test
+
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
