--- a/adapter_services/streaming_availability_adapter/Dockerfile
+++ b/adapter_services/streaming_availability_adapter/Dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.9-alpine
 
 # Set the working directory
-WORKDIR /omdb_adapter
+WORKDIR /streaming_availability_adapter
 
 # Copy the current directory contents into the container at /omdb_adapter
 COPY . .
@@ -14,7 +14,7 @@ RUN rm -rf ./test
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Make port 5000 available to the world outside this container
-EXPOSE 5001
+EXPOSE 5000
 
 # Define environment variable
 ENV FLASK_APP=app.py
