--- a/adapter_services/omdb_adapter/Dockerfile
+++ b/adapter_services/omdb_adapter/Dockerfile
@@ -17,7 +17,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 5001
 
 # Define environment variable
-ENV FLASK_APP=app.py
+ENV PORT=5000
 
 # Run app.py when the container launches
-CMD ["flask", "run", "--host=0.0.0.0"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
