--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,5 +46,16 @@ services:
       - ATLAS_URI=${ATLAS_URI}
       - DB_NAME=${DB_NAME}
 
+  email-check-adapter:
+    build:
+      context: ./adapter_services/email_check_adapter
+    container_name: email-check-adapter
+    ports:
+      - "5009:5000"
+    env_file:
+      - .env
+    environment:
+      - ABSTRACT_API_KEY=${ABSTRACT_API_KEY}
+
 volumes:
   mongo-data:
