--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,5 +87,18 @@ services:
     volumes:
       - ./adapter_services/groq_adapter:/groq_adapter 
 
+  duckduckgo-adapter:
+    build:
+      context: ./adapter_services/duckduckgo_adapter
+    container_name: duckduckgo-adapter
+    ports:
+      - "5008:5000"
+    env_file:
+      - .env
+    environment:
+      - DUCKDUCKGO_API_KEY=${DUCKDUCKGO_API_KEY}
+    volumes:
+      - ./adapter_services/duckduckgo_adapter:/duckduckgo_adapter
+
 volumes:
   mongo-data:
