--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,5 +100,18 @@ services:
     volumes:
       - ./adapter_services/duckduckgo_adapter:/duckduckgo_adapter
 
+  youtube-adapter:
+    build:
+      context: ./adapter_services/youtube_adapter
+    container_name: youtube-adapter
+    ports:
+      - "5009:5000"
+    env_file:
+      - .env
+    environment:
+      - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
+    volumes:
+      - ./adapter_services/youtube_adapter:/youtube_adapter
+
 volumes:
   mongo-data:
