added movie-details service, modified youtube-controller in order to match schema, and modified dockerfile and docker-compose in order to allow for reload for all containers

--- a/business_logic_services/movie_details_service/Dockerfile
+++ b/business_logic_services/movie_details_service/Dockerfile
@@ -2,13 +2,10 @@
 FROM python:3.12-alpine
 
 # Set the working directory
-WORKDIR /streaming_availability_adapter
+WORKDIR /movie_details_controller.py
 
-# Copy the current directory contents into the container at /omdb_adapter
+# Copy the current directory contents into the container at /valid_email_service
 COPY . .
-
-# Remove the test folder
-RUN rm -rf ./test
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
