--- a/adapter_services/youtube_adapter/Dockerfile
+++ b/adapter_services/youtube_adapter/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM python:3.9-alpine
+FROM python:3.12-alpine
 
 # Set the working directory
 WORKDIR /youtube_adapter
@@ -20,4 +20,4 @@ EXPOSE 5000
 ENV PORT=5000
 
 # Run app.py when the container launches
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
